--- a/.github/workflows/main_accesskioskreports.yml
+++ b/.github/workflows/main_accesskioskreports.yml
@@ -40,7 +40,6 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
@@ -51,8 +50,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'AccessForKioskReport'
+          app-name: 'AccessKioskReports'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_59397CF20F4F456ABACDC0C37B441C7B }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_8F7447E40C974B3F82D5FA271FECBDA6 }}
           package: .
-
